# hyperion

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  deny.toml  flake.nix
.github/workflows/: bench.yml  ci.yml  deploy_pages.yml  publish.yml
crates/bvh-region/: Cargo.toml
crates/bvh-region/src/: build.rs  utils.rs
crates/bvh-region/src/query/: closest.rs
crates/geometry/: Cargo.toml
crates/geometry/src/: ray.rs
crates/hyperion/: Cargo.toml
crates/hyperion-clap/: Cargo.toml
crates/hyperion-clap-macros/: Cargo.toml
crates/hyperion-clap-macros/src/: lib.rs
crates/hyperion-clap/src/: lib.rs
crates/hyperion-command/: Cargo.toml
crates/hyperion-command/src/: command_tree.rs  component.rs  lib.rs  system.rs
crates/hyperion-crafting/: Cargo.toml
crates/hyperion-crafting/src/: lib.rs
crates/hyperion-data/: Cargo.toml  README.md
crates/hyperion-data/src/: buf.rs  db.rs  lib.rs  scratch.rs
crates/hyperion-entity/: Cargo.toml  README.md
crates/hyperion-entity/src/: lib.rs  position.rs  size.rs  uuid.rs
crates/hyperion-entity/src/player/: animation.rs  mod.rs
crates/hyperion-genmap/: Cargo.toml
crates/hyperion-genmap/src/: lib.rs
crates/hyperion-gui/: Cargo.toml  README.md
crates/hyperion-gui/src/: lib.rs
crates/hyperion-inventory/: Cargo.toml  README.md
crates/hyperion-inventory/src/: lib.rs
crates/hyperion-item/: Cargo.toml  README.md
crates/hyperion-item/src/: builder.rs  lib.rs
crates/hyperion-item/src/builder/: book.rs
crates/hyperion-net/: Cargo.toml  README.md
crates/hyperion-net/src/: compose.rs  decode.rs  decoder.rs  encoder.rs  lib.rs  lookup.rs  packet.rs  proxy.rs
crates/hyperion-net/src/agnostic/: chat.rs  sound.rs
crates/hyperion-packet-macros/: Cargo.toml
crates/hyperion-palette/: Cargo.toml
crates/hyperion-palette/src/: indirect.rs  lib.rs
crates/hyperion-permission/: Cargo.toml
crates/hyperion-permission/src/: lib.rs  storage.rs
crates/hyperion-proto/: Cargo.toml
crates/hyperion-proxy/: Cargo.toml
crates/hyperion-proxy-module/: Cargo.toml
crates/hyperion-proxy-module/src/: lib.rs
crates/hyperion-proxy-proto/: Cargo.toml  README.md
crates/hyperion-proxy-proto/src/: crypto.rs  encoder.rs  lib.rs
crates/hyperion-proxy-proto/src/packets/: intermediate.rs  mod.rs  server_to_proxy.rs
crates/hyperion-proxy/src/: cache.rs  egress.rs  lib.rs  player.rs
crates/hyperion-stats/: Cargo.toml
crates/hyperion-stats/src/: lib.rs
crates/hyperion-text/: Cargo.toml
crates/hyperion-text/src/: lib.rs
crates/hyperion-utils/: Cargo.toml  README.md
crates/hyperion-utils/src/: cached_save.rs  lib.rs  prev.rs  runtime.rs
crates/hyperion-world/: Cargo.toml  README.md
crates/hyperion-world/src/: blocks.rs  chunk.rs  lib.rs  packet.rs  region.rs  registry.rs  world.rs
crates/hyperion-world/src/loader/: mod.rs  parse.rs  section.rs
crates/hyperion/src/: config.rs  lib.rs  reflect.rs
crates/hyperion/src/common/: command_channel.rs  config.rs  mod.rs  runtime.rs
crates/hyperion/src/common/util/: mojang.rs
crates/hyperion/src/egress/: channel.rs  mod.rs  stats.rs  sync_chunks.rs  sync_entity_state.rs
crates/hyperion/src/egress/player_join/: mod.rs
crates/hyperion/src/ingress/: decode.rs  mod.rs
crates/hyperion/src/net/: decoder.rs  mod.rs  proxy.rs
crates/hyperion/src/simulation/: animation.rs  command.rs  entity_kind.rs  event.rs  handlers.rs  inventory.rs  mod.rs  packet.rs  packet_state.rs  skin.rs
crates/hyperion/src/simulation/blocks/: manager.rs  mod.rs
crates/hyperion/src/simulation/blocks/chunk/: packet.rs
crates/hyperion/src/simulation/blocks/loader/: mod.rs
crates/hyperion/src/simulation/metadata/: block_display.rs  display.rs  entity.rs  item.rs  living_entity.rs  mod.rs  player.rs
crates/hyperion/src/simulation/metadata/entity/: flags.rs
crates/hyperion/src/spatial/: mod.rs
crates/hyperion/src/storage/: buf.rs  db.rs
crates/hyperion/tests/: collision.rs  entity.rs  spatial.rs
crates/packet-channel/: Cargo.toml
crates/packet-channel/src/: lib.rs
crates/simd-utils/: Cargo.toml
crates/simd-utils/src/: lib.rs
docs/: package.json
docs/.vitepress/: config.mts
docs/architecture/: game-server.md
events/bedwars/: Cargo.toml  build.rs
events/bedwars/src/: command.rs  lib.rs  main.rs  skin.rs
events/bedwars/src/command/: bow.rs  chest.rs  fly.rs  gui.rs  raycast.rs  shoot.rs  speed.rs  vanish.rs  xp.rs
events/bedwars/src/plugin/: attack.rs  block.rs  bow.rs  chat.rs  damage.rs  regeneration.rs  spawn.rs  stats.rs  vanish.rs
tools/antithesis-bot/: Cargo.toml
tools/packet-inspector/: Cargo.toml  build.rs
tools/packet-inspector/src/: app.rs  lib.rs  main.rs  packet_io.rs
tools/packet-inspector/src/app/: packet_list.rs
tools/rust-mc-bot/: Cargo.toml
tools/rust-mc-bot/src/: lib.rs  main.rs
