#=============== Profiles ==============#
[profile]
[profile.dev]
incremental = true

[profile.release-debug]
debug = true
inherits = 'release'

[profile.release-full]
codegen-units = 1
debug = false
inherits = 'release'
lto = 'fat'
panic = 'abort'

[workspace]
members = [
    'crates/bvh-region',
    'crates/geometry',
    'crates/hyperion',
    'crates/hyperion-clap',
    'crates/hyperion-command',
    'crates/hyperion-crafting',
    'crates/hyperion-genmap',
    'crates/hyperion-gui',
    'crates/hyperion-inventory',
    'crates/hyperion-item',
    'crates/hyperion-packet-macros',
    'crates/hyperion-palette',
    'crates/hyperion-permission',
    'crates/hyperion-proto',
    'crates/hyperion-proxy',
    'crates/hyperion-proxy-module',
    'crates/hyperion-scheduled',
    'crates/hyperion-stats',
    'crates/hyperion-text',
    'crates/hyperion-utils',
    'crates/packet-channel',
    'crates/simd-utils',
    'events/bedwars',
    'tools/packet-inspector',
    'tools/rust-mc-bot',
]
resolver = '2'

#=============== Dependencies ==============#

[workspace.dependencies]
# Workspace members
hyperion = { path = 'crates/hyperion' }
hyperion-clap = { path = "crates/hyperion-clap" }
hyperion-clap-macros = { path = "crates/hyperion-clap-macros" }
hyperion-command = { path = "crates/hyperion-command" }
hyperion-crafting = { path = "crates/hyperion-crafting" }
hyperion-genmap = { path = "crates/hyperion-genmap" }
hyperion-gui = { path = "crates/hyperion-gui" }
hyperion-inventory = { path = "crates/hyperion-inventory" }
hyperion-item = { path = "crates/hyperion-item" }
hyperion-packet-macros = { path = "crates/hyperion-packet-macros" }
hyperion-palette = { path = "crates/hyperion-palette" }
hyperion-permission = { path = "crates/hyperion-permission" }
hyperion-proto = { path = "crates/hyperion-proto" }
hyperion-proxy = { path = "crates/hyperion-proxy" }
hyperion-proxy-module = { path = "crates/hyperion-proxy-module" }
hyperion-scheduled = { path = "crates/hyperion-scheduled" }
hyperion-text = { path = "crates/hyperion-text" }
hyperion-utils = { path = "crates/hyperion-utils" }

bedwars = { path = "events/bedwars" }
bvh-region = { path = "crates/bvh-region" }
geometry = { path = "crates/geometry" }
packet-channel = { path = "crates/packet-channel" }
rust-mc-bot = { path = "tools/rust-mc-bot" }
simd-utils = { path = 'crates/simd-utils' }

# Valence
valence_anvil = { branch = 'feat-bytes', features = [
    'parsing',
], git = 'https://github.com/TestingPlant/valence' }
valence_build_utils = { branch = 'feat-bytes', git = 'https://github.com/TestingPlant/valence' }
valence_bytes = { branch = 'feat-bytes', git = 'https://github.com/TestingPlant/valence' }
valence_generated = { branch = 'feat-bytes', git = 'https://github.com/TestingPlant/valence' }
valence_ident = { branch = 'feat-bytes', git = 'https://github.com/TestingPlant/valence' }
valence_nbt = { branch = 'feat-bytes', features = [
    'serde',
], git = 'https://github.com/TestingPlant/valence' }
valence_protocol = { branch = 'feat-bytes', features = [
    'compression',
], git = 'https://github.com/TestingPlant/valence' }
valence_registry = { branch = 'feat-bytes', git = 'https://github.com/TestingPlant/valence' }
valence_server = { branch = 'feat-bytes', git = 'https://github.com/TestingPlant/valence' }
valence_text = { branch = 'feat-bytes', git = 'https://github.com/TestingPlant/valence' }


# Error Handling
anyhow = '1.0.98'
snafu = '0.8.5'
thiserror = '2.0.12'

# Math
approx = '0.5.1'
fastrand = '2.1'
glam = { version = '0.29.3', features = ['serde'] }
ndarray = { version = '0.16.1', features = ['blas'] }
num-derive = '0.4.2'
num-traits = '0.2.19'
ordered-float = '5.0'
rand = '0.9.1'
sha2 = '0.10.9'

# Optimized Data Structures
aligned-vec = '0.6'
arc-swap = '1.7'
arrayvec = '0.7.4'
bitfield-struct = '0.12'
bitvec = '1.0'
boxcar = '0.2'
bvh = { git = 'https://github.com/TestingPlant/bvh-data' }
compact_str = '0.9'
enumset = '1.1'
flume = '0.11'
heapless = '0.8'
indexmap = { version = '2.9', features = ['rayon'] }
kanal = '0.1'
once_cell = '1.21'
papaya = '0.2'
parking_lot = '0.12'
roaring = { version = '0.11' }
rustc-hash = { version = '2.1', features = ['nightly'] }
slotmap = '1.1'
thread_local = '1.1'
tikv-jemallocator = '0.6'

# Parsing
clap = { version = '4.5', features = ['derive'] }

# Utilities
bytes = '1.8'
derive-build = '0.1.1'
derive_more = { version = '2.0', features = [
    'display',
    'from',
    'into',
    'deref',
    'deref_mut',
    'debug',
    'constructor',
    'add',
] }
futures-util = '0.3.31'
itertools = '0.14'
libc = '0.2'
more-asserts = '0.3'
time = { version = '0.3', features = ["local-offset"] }
uuid = '1.16'

# Proc Macros
paste = '1.0'
proc-macro2 = '1.0'
quote = { version = '1.0', features = ['proc-macro'] }
syn = '2.0'

# Terminal output
colored = '3.0'
syntect = { version = '5.2', default-features = false, features = [
    "default-fancy",
] }

# Benchmarking / Testing
criterion = '0.5'
divan = { git = 'https://github.com/nvzqz/divan' }
proptest = '1.5'
serial_test = '3.2'
tango-bench = '0.6'

# Files and Environment
directories = '6.0'
dotenvy = '0.15'
envy = '0.4'
flate2 = { version = '1.1', default-features = false, features = ['zlib-ng'] }
libdeflater = '1.24'
memmap2 = '0.9'
mio = { version = '1.0', features = ['os-poll', 'net'] }
tar = '0.4'
toml = '0.8'

# GUI
eframe = { version = '0.31', features = ['persistence', 'wgpu'] }
egui = '0.31'
egui_dock = { version = '0.16', features = ['serde'] }
plotters = { version = '0.3', default-features = false }
plotters-bitmap = '0.3'

# Database
heed = '0.21'

# Runtime / Paralleism / SIMD
bevy = { version = '0.16', default-features = false, features = [
    'multi_threaded',
] }
num_cpus = '1.16'
rayon = '1.10'
tokio = { version = '1.45', features = [
    'rt-multi-thread',
    'io-util',
    'net',
    'time',
    'macros',
    'tracing',
    'sync',
] }
tokio-util = { version = '0.7', features = ['net', 'codec', 'io-util'] }

# Data Transmission / Encryption
reqwest = { version = '0.12', features = ['rustls-tls', 'stream'] }
rustls = { version = '0.23', default-features = false, features = [
    'logging',
    'std',
    'tls12',
] }
rustls-pki-types = '1.12'
rustls-webpki = '0.103'
tokio-rustls = { version = '0.26', default-features = false, features = [
    'logging',
    'tls12',
] }

# Encoding / Decoding
base64 = '0.22'
byteorder = '1.5'
hex = '0.4'
bytemuck = { version = '1.23', features = ['derive'] }

# De-/Serialization
rkyv = '0.8.8'
serde = { version = '1.0', features = ['derive'] }
serde_json = { version = '1.0', features = ['raw_value'] }

# Logging
tracing = { version = '0.1', features = ['release_max_level_info'] }
tracing-subscriber = { version = '0.3', features = ['env-filter', 'time'] }
tracing-tracy = { version = '0.11', features = ['timer-fallback'] }
tracing-appender = '0.2'

#=============== Lints ==============#

[workspace.lints]
[workspace.lints.clippy]
cast_precision_loss = 'allow'
future_not_send = 'allow'
missing_errors_doc = 'allow'
missing_panics_doc = 'allow'
module_name_repetitions = 'allow'
print_stdout = 'deny'
single_match_else = 'allow'
too_long_first_doc_paragraph = 'allow'
too_many_lines = 'allow'
needless_pass_by_value = 'allow'
type_complexity = 'allow'
too_many_arguments = 'allow'

upper_case_acronyms = 'deny'

[workspace.lints.clippy.complexity]
level = 'deny'
priority = -1

[workspace.lints.clippy.nursery]
level = 'deny'
priority = -1

[workspace.lints.clippy.pedantic]
level = 'deny'
priority = -1

[workspace.lints.clippy.perf]
level = 'deny'
priority = -1

[workspace.lints.clippy.style]
level = 'deny'
priority = -1

[workspace.lints.clippy.suspicious]
level = 'deny'
priority = -1

[workspace.lints.rust]
[workspace.lints.rust.future_incompatible]
level = 'deny'
priority = -1

[workspace.lints.rust.keyword_idents]
level = 'deny'
priority = -1

[workspace.lints.rust.let_underscore]
level = 'deny'
priority = -1

[workspace.lints.rust.nonstandard_style]
level = 'deny'
priority = -1

[workspace.lints.rust.refining_impl_trait]
level = 'deny'
priority = -1

[workspace.lints.rust.rust_2018_idioms]
level = 'deny'
priority = -1

[workspace.lints.rust.rust_2024_compatibility]
level = 'deny'
priority = -1

[workspace.package]
documentation = 'https://andrewgazelka.github.io/hyperion'
edition = '2024'
license = 'Apache-2.0'
repository = 'https://github.com/andrewgazelka/hyperion'
version = '0.1.0'
