[workspace.package]
edition = '2024'
version = '0.1.0'
license = 'Apache-2.0'
repository = 'https://github.com/GrandmasterB42/hyperion'
documentation = ''

#=============== Profiles ==============#
[profile]
[profile.dev]
incremental = true

[profile.release-debug]
debug = true
inherits = 'release'

[profile.release-full]
codegen-units = 1
debug = false
inherits = 'release'
lto = 'fat'
panic = 'abort'

[workspace]
members = [
    'crates/bvh-region',
    'crates/geometry',
    'crates/hyperion',
    'crates/hyperion-clap',
    'crates/hyperion-command',
    'crates/hyperion-crafting',
    'crates/hyperion-genmap',
    'crates/hyperion-gui',
    'crates/hyperion-inventory',
    'crates/hyperion-item',
    'crates/hyperion-packet-macros',
    'crates/hyperion-palette',
    'crates/hyperion-permission',
    'crates/hyperion-proto',
    'crates/hyperion-proxy',
    'crates/hyperion-proxy-module',
    'crates/hyperion-stats',
    'crates/hyperion-text',
    'crates/hyperion-utils',
    'crates/packet-channel',
    'events/bedwars',
    'tools/packet-inspector',
    'tools/rust-mc-bot',
]
resolver = '2'

#=============== Dependencies ==============#

[workspace.dependencies]
# Workspace members
hyperion = { path = 'crates/hyperion' }
hyperion-clap = { path = "crates/hyperion-clap" }
hyperion-clap-macros = { path = "crates/hyperion-clap-macros" }
hyperion-command = { path = "crates/hyperion-command" }
hyperion-crafting = { path = "crates/hyperion-crafting" }
hyperion-genmap = { path = "crates/hyperion-genmap" }
hyperion-gui = { path = "crates/hyperion-gui" }
hyperion-inventory = { path = "crates/hyperion-inventory" }
hyperion-item = { path = "crates/hyperion-item" }
hyperion-packet-macros = { path = "crates/hyperion-packet-macros" }
hyperion-palette = { path = "crates/hyperion-palette" }
hyperion-permission = { path = "crates/hyperion-permission" }
hyperion-proto = { path = "crates/hyperion-proto" }
hyperion-proxy = { path = "crates/hyperion-proxy" }
hyperion-proxy-module = { path = "crates/hyperion-proxy-module" }
hyperion-text = { path = "crates/hyperion-text" }
hyperion-utils = { path = "crates/hyperion-utils" }

bvh-region = { path = "crates/bvh-region" }
geometry = { path = "crates/geometry" }
packet-channel = { path = "crates/packet-channel" }
rust-mc-bot = { path = "tools/rust-mc-bot" }

# Valence
valence_anvil = { branch = 'feat-bytes', features = [
    'parsing',
], git = 'https://github.com/TestingPlant/valence' }
valence_build_utils = { branch = 'feat-bytes', git = 'https://github.com/TestingPlant/valence' }
valence_bytes = { branch = 'feat-bytes', git = 'https://github.com/TestingPlant/valence' }
valence_generated = { branch = 'feat-bytes', git = 'https://github.com/TestingPlant/valence' }
valence_ident = { branch = 'feat-bytes', git = 'https://github.com/TestingPlant/valence' }
valence_nbt = { branch = 'feat-bytes', features = [
    'serde',
], git = 'https://github.com/TestingPlant/valence' }
valence_protocol = { branch = 'feat-bytes', features = [
    'compression',
], git = 'https://github.com/TestingPlant/valence' }
valence_registry = { branch = 'feat-bytes', git = 'https://github.com/TestingPlant/valence' }
valence_server = { branch = 'feat-bytes', git = 'https://github.com/TestingPlant/valence' }
valence_text = { branch = 'feat-bytes', git = 'https://github.com/TestingPlant/valence' }

# Error Handling
anyhow = '1.0.98'
thiserror = '2'

# Math
approx = '0.5.1'
fastrand = '2.1'
glam = { version = '0.29.3', features = ['serde'] }
ndarray = { version = '0.16.1', features = ['blas'] }
ordered-float = '5.0'
rand = '0.9.1'
sha2 = '0.10.9'

# Optimized Data Structures
arc-swap = '1.7'
arrayvec = '0.7.4'
bitfield-struct = '0.12'
bitvec = '1.0'
boxcar = '0.2'
bvh = { git = 'https://github.com/TestingPlant/bvh-data' }
compact_str = '0.9'
enumset = '1.1'
flume = '0.11'
heapless = '0.8'
indexmap = { version = '2.9', features = ['rayon'] }
kanal = '0.1'
papaya = '0.2'
roaring = '0.11'
rustc-hash = { version = '2.1', features = ['nightly'] }
slotmap = '1.1'
thread_local = '1.1'
tikv-jemallocator = '0.6'

# Parsing
clap = { version = '4.5', features = ['derive'] }

# Utilities
bytes = '1.8'
futures-util = '0.3.31'
itertools = '0.14'
libc = '0.2'
more-asserts = '0.3'
time = { version = '0.3', features = ["local-offset"] }
uuid = '1.16'

# Proc Macros
paste = '1.0'
proc-macro2 = '1.0'
quote = { version = '1.0', features = ['proc-macro'] }
syn = '2.0'

# Terminal output
colored = '3.0'
syntect = { version = '5.2', default-features = false, features = [
    "default-fancy",
] }

# Benchmarking / Testing
criterion = '0.5'
divan = '0.1.21'
proptest = '1.5'
serial_test = '3.2'
tango-bench = '0.6'

# Files and Environment
directories = '6.0'
dotenvy = '0.15'
envy = '0.4'
flate2 = { version = '1.1', default-features = false, features = ['zlib-ng'] }
libdeflater = '1.24'
memmap2 = '0.9'
mio = { version = '1.0', features = ['os-poll', 'net'] }
tar = '0.4'
toml = '0.8'

# GUI
eframe = { version = '0.31', features = ['persistence', 'wgpu'] }
egui = '0.31'
egui_dock = { version = '0.16', features = ['serde'] }
plotters = { version = '0.3', default-features = false }
plotters-bitmap = '0.3'

# Database
heed = '0.21'

# Runtime / Paralleism / SIMD
bevy_app = '0.18'
bevy_ecs = { version = '0.18', default-features = false, features = [
    'multi_threaded',
] }
bevy_platform = '0.18'
bevy_reflect = '0.18'
bevy_tasks = '0.18'
bevy_time = '0.18'
num_cpus = '1.16'
rayon = '1.10'
tokio = { version = '1.45', features = [
    'rt-multi-thread',
    'io-util',
    'net',
    'time',
    'macros',
    'tracing',
    'sync',
] }
tokio-util = { version = '0.7', features = ['net', 'codec', 'io-util'] }

# Data Transmission / Encryption
reqwest = { version = '0.12', features = ['rustls-tls', 'stream'] }
rustls = { version = '0.23', default-features = false, features = [
    'logging',
    'std',
    'tls12',
] }
rustls-pki-types = '1.12'
rustls-webpki = '0.103'
tokio-rustls = { version = '0.26', default-features = false, features = [
    'logging',
    'tls12',
] }

# Encoding / Decoding
base64 = '0.22'
byteorder = '1.5'
hex = '0.4'
bytemuck = { version = '1.23', features = ['derive'] }

# De-/Serialization
rkyv = '0.8.8'
serde = { version = '1.0', features = ['derive'] }
serde_json = { version = '1.0', features = ['raw_value'] }

# Logging
tracing = { version = '0.1', features = ['release_max_level_info'] }
tracing-subscriber = { version = '0.3', features = ['env-filter', 'time'] }
tracing-tracy = { version = '0.11', features = ['timer-fallback'] }
tracing-appender = '0.2'

#=============== Lints ==============#

[workspace.lints]

[workspace.lints.rust]
#missing_docs = 'warn'
future_incompatible = { level = 'deny', priority = -1 }
keyword_idents = { level = 'deny', priority = -1 }
let_underscore = { level = 'deny', priority = -1 }
nonstandard_style = { level = 'deny', priority = -1 }
refining_impl_trait = { level = 'deny', priority = -1 }
rust_2018_idioms = { level = 'deny', priority = -1 }
rust_2024_compatibility = { level = 'deny', priority = -1 }
variant_size_differences = { level = 'deny', priority = -1 }

[workspace.lints.clippy]
missing_errors_doc = 'allow'
missing_panics_doc = 'allow'
module_name_repetitions = 'allow'
needless_pass_by_value = 'allow'
print_stdout = 'deny'
too_long_first_doc_paragraph = 'allow'
too_many_arguments = 'allow'
type_complexity = 'allow'
upper_case_acronyms = 'deny'
complexity = { level = 'deny', priority = -1 }
pedantic = { level = 'deny', priority = -1 }
perf = { level = 'deny', priority = -1 }
# cargo = { level = 'deny', priority = -1 } TODO: fix this before publishing
