[package]
name = "geometry"
edition.workspace = true
version.workspace = true
publish = false
readme = "README.md"

[[bench]]
name = "general"
harness = false

[dependencies]
glam.workspace = true
ordered-float.workspace = true
serde.workspace = true

[dev-dependencies]
approx.workspace = true
itertools.workspace = true
rand.workspace = true
tango-bench.workspace = true

[lints]
workspace = true
