[package]
name = "hyperion-clap"
version.workspace = true
edition.workspace = true
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
clap.workspace = true
hyperion.workspace = true
hyperion-clap-macros.workspace = true
hyperion-command.workspace = true
hyperion-permission.workspace = true
hyperion-utils.workspace = true
tracing.workspace = true
valence_protocol.workspace = true
valence_bytes.workspace = true

[lints]
workspace = true
