[package]
name = "hyperion-clap"
edition.workspace = true
version.workspace = true
publish = false
readme = "README.md"

[features]
reflect = [
    "bevy_app/reflect_auto_register",
    "bevy_ecs/reflect_auto_register",
    "hyperion/reflect",
    "hyperion-command/reflect",
    "hyperion-permission/reflect",
    "hyperion-utils/reflect",
]

[dependencies]
hyperion.workspace = true
hyperion-clap-macros.workspace = true
hyperion-command.workspace = true
hyperion-permission.workspace = true
hyperion-utils.workspace = true

valence_bytes.workspace = true
valence_protocol.workspace = true

bevy_app.workspace = true
bevy_ecs.workspace = true

clap.workspace = true
tracing.workspace = true

[lints]
workspace = true
