[package]
name = "hyperion-command"
edition.workspace = true
version.workspace = true
publish = false
readme = "README.md"

[dependencies]
hyperion.workspace = true
hyperion-utils.workspace = true

bevy_app.workspace = true
bevy_ecs.workspace = true

indexmap.workspace = true
itertools.workspace = true
tracing.workspace = true

[lints]
workspace = true
