[package]
name = "hyperion-command"
edition.workspace = true
version.workspace = true
publish = false
readme = "README.md"

[features]
reflect = [
    "dep:bevy_reflect",
    "bevy_app/reflect_auto_register",
    "bevy_ecs/reflect_auto_register",
    "bevy_reflect/auto_register_inventory",
    "hyperion/reflect",
    "hyperion-utils/reflect",
]

[dependencies]
hyperion.workspace = true
hyperion-utils.workspace = true

bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_reflect = { workspace = true, optional = true }

indexmap.workspace = true
itertools.workspace = true
tracing.workspace = true

[lints]
workspace = true
