[package]
name = "hyperion-entity"
edition.workspace = true
version.workspace = true
publish = false
readme = "README.md"

[features]
reflect = ["dep:bevy_reflect", "bevy_ecs/reflect_auto_register"]

[dependencies]
valence_protocol.workspace = true

bevy_ecs.workspace = true
bevy_reflect = { workspace = true, optional = true }

bytemuck.workspace = true
enumset.workspace = true
fastrand.workspace = true
geometry.workspace = true
glam.workspace = true
serde.workspace = true
uuid.workspace = true

[lints]
workspace = true
