[package]
name = "hyperion-gui"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bevy_ecs.workspace = true
hyperion.workspace = true
hyperion-inventory.workspace = true
hyperion-utils.workspace = true
serde.workspace = true
valence_protocol.workspace = true
tracing.workspace = true

[lints]
workspace = true
