[package]
name = "hyperion-gui"
edition.workspace = true
version.workspace = true

[features]
reflect = [
    "dep:bevy_reflect",
    "bevy_ecs/reflect_auto_register",
    "bevy_reflect/auto_register_inventory",
    "hyperion-inventory/reflect",
]

[dependencies]
hyperion-entity.workspace = true
hyperion-inventory.workspace = true

valence_protocol.workspace = true

bevy_ecs.workspace = true
bevy_reflect = { workspace = true, optional = true }

serde.workspace = true

[lints]
workspace = true
