[package]
name = "hyperion-inventory"
edition.workspace = true
version.workspace = true
publish = false
readme = "README.md"

[dependencies]
hyperion-crafting.workspace = true

valence_generated.workspace = true
valence_protocol.workspace = true

bevy_ecs.workspace = true

tracing.workspace = true
thiserror.workspace = true
thread_local.workspace = true

[lints]
workspace = true
