[package]
name = "hyperion-item"
version.workspace = true
edition.workspace = true
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bytemuck.workspace = true
valence_protocol.workspace = true
hyperion.workspace = true
hyperion-inventory.workspace = true
hyperion-utils.workspace = true
tracing.workspace = true

[lints]
workspace = true
