[package]
name = "hyperion-item"
edition.workspace = true
version.workspace = true
publish = false
readme = "README.md"

[dependencies]
hyperion.workspace = true
hyperion-inventory.workspace = true

valence_protocol.workspace = true

bevy_app.workspace = true
bevy_ecs.workspace = true

bytemuck.workspace = true
tracing.workspace = true

[lints]
workspace = true
