[package]
name = "hyperion-item"
edition.workspace = true
version.workspace = true
publish = false
readme = "README.md"

[features]
reflect = [
    "hyperion-inventory/reflect",
    "bevy_app/reflect_auto_register",
    "bevy_ecs/reflect_auto_register",
]

[dependencies]
hyperion-inventory.workspace = true
hyperion-net.workspace = true

valence_protocol.workspace = true

bevy_app.workspace = true
bevy_ecs.workspace = true

bytemuck.workspace = true
tracing.workspace = true

[lints]
workspace = true
