[package]
name = "hyperion-permission"
edition.workspace = true
version.workspace = true
publish = false
readme = "README.md"

[dependencies]
hyperion.workspace = true

bevy_app.workspace = true
bevy_ecs.workspace = true

anyhow.workspace = true
clap.workspace = true
heed.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
