[package]
name = "hyperion-permission"
edition.workspace = true
version.workspace = true
publish = false
readme = "README.md"

[features]
reflect = [
    "dep:bevy_reflect",
    "bevy_app/reflect_auto_register",
    "bevy_ecs/reflect_auto_register",
    "bevy_reflect/auto_register_inventory",
]

[dependencies]
hyperion-command.workspace = true
hyperion-data.workspace = true
hyperion-entity.workspace = true
hyperion-net.workspace = true
hyperion-proxy-proto.workspace = true

bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_reflect = { workspace = true, optional = true }

anyhow.workspace = true
clap.workspace = true
heed.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
