[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
hyperion-proxy.workspace = true
hyperion.workspace = true
tracing.workspace = true
tokio.workspace = true

[lints]
workspace = true

[package]
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition.workspace = true
name = "hyperion-proxy-module"
publish = false
readme = "README.md"
version.workspace = true
