[package]
name = "hyperion-proxy-module"
edition.workspace = true
version.workspace = true
publish = false
readme = "README.md"

[dependencies]
hyperion.workspace = true
hyperion-proxy.workspace = true

bevy_app.workspace = true
bevy_ecs.workspace = true

tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
