[package]
name = "hyperion-proxy"
edition.workspace = true
version.workspace = true
publish = false
readme = "README.md"

[dependencies]
hyperion-proxy-proto.workspace = true

anyhow.workspace = true
arrayvec.workspace = true
bvh.workspace = true
bytes.workspace = true
clap.workspace = true
colored.workspace = true
dotenvy.workspace = true
envy.workspace = true
glam.workspace = true
kanal.workspace = true
papaya.workspace = true
rkyv.workspace = true
rustc-hash.workspace = true
rustls.workspace = true
rustls-webpki.workspace = true
serde.workspace = true
slotmap.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator.workspace = true

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["rustls-webpki"]
