[package]
name = "hyperion-stats"
edition.workspace = true
version.workspace = true
publish = false
readme = "README.md"

[[bench]]
harness = false
name = "parallel_stats"

[dependencies]

[dev-dependencies]
approx.workspace = true
divan.workspace = true
rand.workspace = true

[lints]
workspace = true
