[package]
name = "hyperion-utils"
edition.workspace = true
version.workspace = true
publish = false
readme = "README.md"

[features]
reflect = [
    "dep:bevy_reflect",
    "bevy_app/reflect_auto_register",
    "bevy_ecs/reflect_auto_register",
    "bevy_reflect/auto_register_inventory",
]

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_reflect = { workspace = true, optional = true }

anyhow.workspace = true
bytemuck.workspace = true
directories.workspace = true
flate2.workspace = true
futures-util.workspace = true
hex.workspace = true
reqwest.workspace = true
sha2.workspace = true
tar.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[lints]
workspace = true
