[package]
name = "hyperion"
edition.workspace = true
version.workspace = true
publish = false
readme = "README.md"

[features]
reflect = [
    "dep:bevy_reflect",
    "bevy_app/reflect_auto_register",
    "bevy_ecs/reflect_auto_register",
    "bevy_reflect/auto_register_inventory",
    "bevy_reflect/uuid",
    "hyperion-crafting/reflect",
    "hyperion-inventory/reflect",
    "hyperion-utils/reflect",
]

[[bench]]
harness = false
name = "set"

[dependencies]
hyperion-crafting.workspace = true
hyperion-inventory.workspace = true
hyperion-packet-macros.workspace = true
hyperion-palette.workspace = true
hyperion-proto.workspace = true
hyperion-text.workspace = true
hyperion-utils.workspace = true

valence_anvil.workspace = true
valence_bytes.workspace = true
valence_generated.workspace = true
valence_ident.workspace = true
valence_nbt.workspace = true
valence_protocol.workspace = true
valence_registry.workspace = true
valence_server.workspace = true
valence_text.workspace = true

bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_reflect = { workspace = true, optional = true }
bevy_tasks.workspace = true
bevy_time.workspace = true

anyhow.workspace = true
base64.workspace = true
bitfield-struct.workspace = true
bitvec.workspace = true
boxcar.workspace = true
bvh-region.workspace = true
bytemuck.workspace = true
byteorder.workspace = true
bytes.workspace = true
colored.workspace = true
enumset.workspace = true
fastrand.workspace = true
flate2.workspace = true
geometry.workspace = true
glam.workspace = true
heapless.workspace = true
heed.workspace = true
indexmap.workspace = true
itertools.workspace = true
libc.workspace = true
libdeflater.workspace = true
memmap2.workspace = true
more-asserts.workspace = true
ndarray.workspace = true
ordered-float.workspace = true
packet-channel.workspace = true
paste.workspace = true
rayon.workspace = true
reqwest.workspace = true
rkyv.workspace = true
roaring.workspace = true
rustc-hash.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
rustls-webpki.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
thread_local.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
hyperion-genmap.workspace = true

approx.workspace = true
divan.workspace = true
fastrand.workspace = true
serial_test.workspace = true

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["rustls-webpki"]
