[package]
name = "hyperion"
edition.workspace = true
version.workspace = true
publish = false
readme = "README.md"

[features]
reflect = [
    "dep:bevy_reflect",
    "bevy_app/reflect_auto_register",
    "bevy_ecs/reflect_auto_register",
    "bevy_reflect/auto_register_inventory",
    "bevy_reflect/uuid",
    "hyperion-crafting/reflect",
    "hyperion-inventory/reflect",
    "hyperion-utils/reflect",
]
ecs_debug = ["bevy_ecs/trace", "bevy_ecs/debug"]

[[bench]]
harness = false
name = "set"

[dependencies]
hyperion-clap.workspace = true
hyperion-command.workspace = true
hyperion-crafting.workspace = true
hyperion-data.workspace = true
hyperion-entity.workspace = true
hyperion-gui.workspace = true
hyperion-inventory.workspace = true
hyperion-item.workspace = true
hyperion-net.workspace = true
hyperion-permission.workspace = true
hyperion-proxy-proto.workspace = true
hyperion-utils.workspace = true
hyperion-world.workspace = true

valence_bytes.workspace = true
valence_generated.workspace = true
valence_ident.workspace = true
valence_protocol.workspace = true
valence_registry.workspace = true
valence_server.workspace = true
valence_text.workspace = true

bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_reflect = { workspace = true, optional = true }
bevy_tasks.workspace = true
bevy_time.workspace = true

anyhow.workspace = true
base64.workspace = true
bitfield-struct.workspace = true
boxcar.workspace = true
bvh-region.workspace = true
byteorder.workspace = true
bytes.workspace = true
colored.workspace = true
fastrand.workspace = true
geometry.workspace = true
glam.workspace = true
heapless.workspace = true
heed.workspace = true
itertools.workspace = true
libc.workspace = true
libdeflater.workspace = true
ndarray.workspace = true
ordered-float.workspace = true
rayon.workspace = true
reqwest.workspace = true
rkyv.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
hyperion-world.workspace = true

approx.workspace = true
divan.workspace = true
fastrand.workspace = true
serial_test.workspace = true

[lints]
workspace = true
