[package]
name = "packet-channel"
edition.workspace = true
version.workspace = true
publish = false
readme = "README.md"

[[bench]]
harness = false
name = "packet_channel"

[dependencies]
valence_protocol.workspace = true

bevy_ecs.workspace = true

arc-swap.workspace = true
more-asserts.workspace = true

[dev-dependencies]
divan.workspace = true
proptest.workspace = true

[lints]
workspace = true
