[package]
name = "bedwars"
edition.workspace = true
version.workspace = true
publish = false
readme = "README.md"

[dependencies]
hyperion.workspace = true
hyperion-clap.workspace = true
hyperion-genmap.workspace = true
hyperion-gui.workspace = true
hyperion-inventory.workspace = true
hyperion-item.workspace = true
hyperion-permission.workspace = true
hyperion-proxy-module.workspace = true
hyperion-text.workspace = true
hyperion-utils.workspace = true

valence_bytes.workspace = true
valence_protocol.workspace = true
valence_server.workspace = true
valence_text.workspace = true

bevy_app.workspace = true
bevy_ecs.workspace = true

anyhow.workspace = true
clap.workspace = true
compact_str.workspace = true
dotenvy.workspace = true
envy.workspace = true
fastrand.workspace = true
geometry.workspace = true
glam.workspace = true
rayon.workspace = true
roaring.workspace = true
rustc-hash.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tracing = { workspace = true, features = ["release_max_level_info"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator.workspace = true

[lints]
workspace = true
